# isimip-publisher

./: .env.pytest  .env.travis  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yaml  pytest.yml
isimip_publisher/: __init__.py  commands.py  config.py  main.py  models.py
isimip_publisher/commands/: checksum.py  clean.py  copy.py  copy_files.py  create_checksums.py  create_datasets.py  create_jsons.py  fetch.py  ingest.py  ingest_datasets.py  ingest_files.py  json.py  list.py  list_files.py  list_local.py  list_remote.py  match_local_datasets.py  match_local_files.py  match_remote_datasets.py  match_remote_files.py  publish.py  publish_files.py  update.py  update_database.py  update_files.py  validate.py  validate_local.py  validate_remote.py  write_checksums.py  write_dataset_jsons.py  write_file_jsons.py
isimip_publisher/database/: models.py  utils.py
isimip_publisher/netcdf/: utils.py
isimip_publisher/tests/: test_commands.py
isimip_publisher/utils/: __init__.py  checksum.py  config.py  database.py  datacite.py  datasets.py  dois.py  fetch.py  files.py  json.py  metadata.py  netcdf.py  patterns.py  region.py  schema.py  thumbnails.py  tree.py  validation.py
requirements/: common.txt  dev.txt
testing/: datacite.json
testing/config/: _default.yml  default.yml
testing/config/test-round/test-product/: _default.yml  test-sector.yml
testing/config/testround/testproduct/: testsector.yml
testing/datacite/: 001.json  001b.json
testing/datacite/round/product/sector/model/: 001.json
testing/datacite/round/product/sector/model2/: 002.json
testing/definitions/round/product/: alpha.json  beta.json  delta.json  end_year.json  gamma.json  modelname.json  region.json  start_year.json  timestep.json  variable.json
testing/files/round/product/sector/model/: model_ipsum_dolor_sit_amet_var_global_monthly_2000_2001.json  model_ipsum_dolor_sit_amet_var_global_monthly_2001_2002.json  model_ipsum_dolor_sit_amet_var_global_monthly_2002_2003.json  model_lorem_dolor_sit_amet_var_global_monthly_2000_2001.json  model_lorem_dolor_sit_amet_var_global_monthly_2001_2002.json  model_lorem_dolor_sit_amet_var_global_monthly_2002_2003.json
testing/files/round/product/sector2/model/: model_ipsum_dolor_sit_amet_var_global_monthly_2000_2001.nc  model_ipsum_dolor_sit_amet_var_global_monthly_2001_2002.nc  model_ipsum_dolor_sit_amet_var_global_monthly_2002_2003.nc  model_lorem_dolor_sit_amet_var_global_monthly_2000_2001.nc  model_lorem_dolor_sit_amet_var_global_monthly_2001_2002.nc  model_lorem_dolor_sit_amet_var_global_monthly_2002_2003.nc
testing/pattern/round/product/: sector.json
testing/protocol/output/definitions/round/product/: sector.json
testing/protocol/output/pattern/round/product/: sector2.json
testing/protocol/output/schema/round/product/: sector2.json
testing/protocol/output/tree/round/product/: sector2.json
testing/protocol/pattern/round/product/: sector.json  sector2.json
testing/protocol/schema/round/product/: sector2.json
testing/protocol/tree/round/product/: sector2.json
testing/remote/test-round/test-product/test-sector/test-model/: test-model_ipsum_dolor_sit_amet_var_global_monthly_2001_2002.nc4
testing/remote/testround/output/testsector/testmodel/: testmodel_a_b_c_d_var_global_monthly_2000_2001.nc4
testing/resources/: test.json  test1.json
testing/resources/10.12345/: ISIMIP.001.json
testing/schema/round/product/: sector.json
testing/sql/: datasets.sql  files.sql  resources.sql  resources_datasets.sql  setup.sql
