[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
name = "isimip-publisher"
authors = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
maintainers = [
    { name = "Jochen Klar", email = "jochen.klar@pik-potsdam.de" },
]
description = "A command line tool to publish climate impact data from the ISIMIP project."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14'
]
dependencies = [
    "datacite>=1.1.2",
    "deepdiff>=8.0.0",
    "isimip-utils>=2.0",
    "jsonschema>=3.2.0",
    "psycopg2-binary>=2.8.6",
    "SQLAlchemy>=1.4.2",
    "tqdm>=4.59.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ISI-MIP/isimip-publisher"

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]
pytest = [
    "pytest~=7.4.0",
    "pytest-console-scripts~=1.4.1",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0"
]

[project.scripts]
isimip-publisher = "isimip_publisher.main:main"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = [
    "isimip_publisher"
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isimip_utils",
    "first-party",
    "local-folder"
]

[tool.ruff.isort.sections]
isimip_utils = ["isimip_utils"]
