[metadata]
name = isimip-publisher
version = attr: isimip_publisher.VERSION
description = A command line tool to publish climate impact data from the ISIMIP project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ISI-MIP/isimip-publisher
author = Jochen Klar
email = jochen.klar@pik-potsdam.de
license = MIT
classifiers =
    # see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    datacite>=1.1.2
    isimip-utils>=1.1.0
    jsonschema>=3.2.0
    netCDF4>=1.5.6
    psycopg2-binary>=2.8.6
    python-dotenv==0.16.0
    requests>=2.25.1
    SQLAlchemy>=1.4.2
    tqdm>=4.59.0

[options.entry_points]
console_scripts =
  isimip-publisher = isimip_publisher.main:main

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
script_launch_mode = subprocess

